--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,11 +40,7 @@
         </nav>
     </header>
     <main class="main-content">
-<!--        当前检测进度-->
-        <div class="status-card">
-            <a class="status-card-title">当前检测进度</a>
-            <a class="status-card-title" id="current_testing_progress">等待数据...</a>
-        </div>
+
 
         <script>
             fetch('http://localhost:8000/api/get_current_testing_progress')
@@ -101,6 +97,11 @@
             });
         </script>
 
+<!--        当前检测进度-->
+        <div class="status-card">
+            <a class="status-card-title">当前检测进度</a>
+            <a class="status-card-title" id="current_testing_progress">等待数据...</a>
+        </div>
         <div class="status-card">
             <a class="status-card-title">最近检测时间</a>
             <a class="status-card-title" id="recent_detection_time">等待数据...</a>
@@ -129,7 +130,6 @@
                 .then(response => response.json())
                 .then(data => {
                     document.getElementById('all_analysis_sum').innerHTML = `
-<!--                    <a>${data.message}</a>-->
                     <h2>${data.value}</h2>
                 `;
                 })
@@ -139,7 +139,7 @@
         </script>
         <div class="status-card">
             <a class="status-card-title">本周/月异常样本趋势</a>
-            <div id="abnormal_trend" style="width: 600px; height: 400px;"></div>
+            <div id="abnormal_trend" style="min-width: 300px; height: 400px; flex: 1"></div>
         </div>
         <script>
             const abnormal_trend = echarts.init(document.getElementById('abnormal_trend'));
@@ -222,36 +222,98 @@
             });
         </script>
         <div class="status-card">
-            <a class="status-card-title">近期活动记录</a>
-        </div>
-        <div class="status-card">
             <a class="status-card-title">CPU/内存使用率</a>
-            <div id="cpu_mem_usage" style="width: 600px;height:400px;"></div>
+            <div class="chart-container" style="display: flex; justify-content: space-between"> <!-- 父容器设为 Flex -->
+                <div id="cpu_usage" style="width: 300px; height: 400px;"></div>
+                <div id="mem_usage" style="width: 300px; height: 400px;"></div>
+            </div>
         </div>
         <script>
-            const cpu_mem_usage = echarts.init(document.getElementById('cpu_mem_usage'));
+            const cpu_usage = echarts.init(document.getElementById('cpu_usage'));
+            const mem_usage = echarts.init(document.getElementById('mem_usage'));
 
-            fetch('http://127.0.0.1:8000/api/get_cp')
+            fetch('http://127.0.0.1:8000/api/get_cpu_mem_usage')
                 .then(response => response.json())
                 .then(data => {
                     // 动态生成图表配置
-                    const option = {
-                        title: {text: data.title},
-                        tooltip: {},
+                    const option1 = {
+                        tooltip: {
+                            trigger: 'item'
+                        },
                         legend: {
-                            data: data.series.map(item => item.name)
+                            top: '5%',
+                            left: 'center'
                         },
-                        xAxis: {
-                            data: data.categories
-                        },
-                        yAxis: {},
-                        series: data.series
+                        series: [
+                            {
+                                name: data.series[0].name,
+                                type: 'pie',
+                                radius: ['40%', '70%'],
+                                avoidLabelOverlap: false,
+                                padAngle: 5,
+                                itemStyle: {
+                                    borderRadius: 10
+                                },
+                                label: {
+                                    show: false,
+                                    position: 'center'
+                                },
+                                emphasis: {
+                                    label: {
+                                        show: true,
+                                        fontSize: 40,
+                                        fontWeight: 'bold'
+                                    }
+                                },
+                                labelLine: {
+                                    show: false
+                                },
+                                data: data.series[0].data,
+                            }
+                        ]
                     };
-                    cpu_mem_usage.setOption(option);
+                    const option2 = {
+                        tooltip: {
+                            trigger: 'item'
+                        },
+                        legend: {
+                            top: '5%',
+                            left: 'center'
+                        },
+                        series: [
+                            {
+                                name: data.series[1].name,
+                                type: 'pie',
+                                radius: ['40%', '70%'],
+                                avoidLabelOverlap: false,
+                                padAngle: 5,
+                                itemStyle: {
+                                    borderRadius: 10
+                                },
+                                label: {
+                                    show: false,
+                                    position: 'center'
+                                },
+                                emphasis: {
+                                    label: {
+                                        show: true,
+                                        fontSize: 40,
+                                        fontWeight: 'bold'
+                                    }
+                                },
+                                labelLine: {
+                                    show: false
+                                },
+                                data: data.series[1].data,
+                            }
+                        ]
+                    };
+                    cpu_usage.setOption(option1);
+                    mem_usage.setOption(option2);
                 })
                 .catch(error => {
                     console.error('加载数据失败:', error);
-                    cpu_mem_usage.setOption({
+                    cpu_usage.setOption({
                         title: {text: '数据加载失败'},
                         xAxis: {},
                         yAxis: {},
@@ -265,6 +327,9 @@
             });
         </script>
 
+        <div class="status-card">
+            <a class="status-card-title">近期活动记录</a>
+        </div>
     </main>
 </div>
 </body>
