--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -18,7 +18,7 @@
         <img alt="校训" class="slogan" src="./src/image/slogan.png">
         <nav class="top-navbar-links">
             <a class="top-navbar-links-item" href="dashboard.html">检测仪表盘</a>
-            <a class="top-navbar-links-item" href="analysis.html">分析</a>
+            <a class="top-navbar-links-item" href="analysis.html">检测服务</a>
             <a class="top-navbar-links-item" href="./new">数据库</a>
             <a class="top-navbar-links-item" href="./history">分析历史</a>
             <a class="top-navbar-links-item" href="./report">帮助</a>
@@ -291,6 +291,41 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section about">
+                <h3>关于系统</h3>
+                <p>农药残留光谱检测系统是一个基于超表面光谱分析的农产品安全检测工具，通过机器学习算法模型，快速准确地检测农产品中的农药残留情况。</p>
+                <div class="contact">
+                    <p><i class="fas fa-phone"></i> +86 175 125 79193</p>
+                    <p><i class="fas fa-envelope"></i> chenhaonan919@gmail.com</p>
+                </div>
+            </div>
+            <div class="footer-section links">
+                <h3>快速链接</h3>
+                <ul>
+                    <li><a href="dashboard.html">首页</a></li>
+                    <li><a href="analysis.html">检测服务</a></li>
+                    <li><a href="#">光谱数据库</a></li>
+                    <li><a href="#">分析历史</a></li>
+                    <li><a href="#">帮助</a></li>
+                </ul>
+            </div>
+            <div class="footer-section resources">
+                <h3>资源</h3>
+                <ul>
+                    <li><a href="#">用户手册</a></li>
+                    <li><a href="#">API文档</a></li>
+                    <li><a href="#">光谱库下载</a></li>
+                    <li><a href="#">常见问题</a></li>
+                    <li><a href="#">算法说明</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 农药残留光谱检测系统 | 版权所有</p>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
