--- a/frontend/analysis.html
+++ b/frontend/analysis.html
@@ -18,8 +18,8 @@
     <img alt="校训" class="slogan" src="./src/image/slogan.png">
     <nav class="top-navbar-links">
         <a class="top-navbar-links-item" href="dashboard.html">检测仪表盘</a>
-        <a class="top-navbar-links-item" href="analysis.html">分析</a>
-        <a class="top-navbar-links-item" href="./new">数据库</a>
+        <a class="top-navbar-links-item" href="analysis.html">检测服务</a>
+        <a class="top-navbar-links-item" href="spectral.html">数据库</a>
         <a class="top-navbar-links-item" href="./history">分析历史</a>
         <a class="top-navbar-links-item" href="./report">帮助</a>
         <div class="top-navbar-profile">
@@ -41,7 +41,7 @@
         </div>
     </nav>
 </header>
-<main class="main-content">
+<main class="main-container">
     <div class="status-card">
         <!-- 上传区域 -->
         <section id="upload-section" class="section">
