--- a/frontend/spectral.html
+++ b/frontend/spectral.html
@@ -8,6 +8,7 @@
     <link href="css/dashboard.css" rel="stylesheet">
     <link href="css/spectral.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.6.0/dist/echarts.min.js"></script>
+    <script src="js/spectral.js"></script>
 </head>
 <body>
 <header class="top-navbar">
