--- a/frontend/spectral.html
+++ b/frontend/spectral.html
@@ -94,8 +94,10 @@
         <label class="tab-label" for="tab-3">
             查询结果
         </label>
-        <section class="tab-content" id="results-container">
-            <p id="initial-prompt">请输入关键词进行查询。</p>
+        <section class="tab-content" >
+            <div id="results-container">
+                <h2 id="initial-prompt">请输入关键词进行查询</h2>
+            </div>
         </section>
     </div>
 </main>
