--- a/frontend/spectral.html
+++ b/frontend/spectral.html
@@ -50,15 +50,31 @@
         </label>
         <div class="tab-content">
             <div class="search-container">
-                <label for="pesticide-search">输入农药名称或CAS号:</label>
+                <svg
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                >
+                    <path
+                            fill-rule="evenodd"
+                            clip-rule="evenodd"
+                            d="M18.319 14.4326C20.7628 11.2941 20.542 6.75347 17.6569 3.86829C14.5327 0.744098 9.46734 0.744098 6.34315 3.86829C3.21895 6.99249 3.21895 12.0578 6.34315 15.182C9.22833 18.0672 13.769 18.2879 16.9075 15.8442C16.921 15.8595 16.9351 15.8745 16.9497 15.8891L21.1924 20.1317C21.5829 20.5223 22.2161 20.5223 22.6066 20.1317C22.9971 19.7412 22.9971 19.1081 22.6066 18.7175L18.364 14.4749C18.3493 14.4603 18.3343 14.4462 18.319 14.4326ZM16.2426 5.28251C18.5858 7.62565 18.5858 11.4246 16.2426 13.7678C13.8995 16.1109 10.1005 16.1109 7.75736 13.7678C5.41421 11.4246 5.41421 7.62565 7.75736 5.28251C10.1005 2.93936 13.8995 2.93936 16.2426 5.28251Z"
+                            fill="currentColor"
+                    />
+                </svg>
+                <label for="pesticide-search">农药名称或CAS号:</label>
                 <input id="pesticide-search" name="pesticide_name" placeholder="例如：草甘膦 或 1071-83-6" type="text">
-                <button id="search-button">查询</button>
+                <button id="search-button">
+                    <span>查询</span>
+                </button>
             </div>
         </div>
 
     </div>
     <div class="tab-container">
-        <input type="checkbox" id="tab-2" checked>
+        <input type="checkbox" id="tab-2" >
         <label class="tab-label" for="tab-2">
             THz光谱数据添加
         </label>
@@ -89,14 +105,14 @@
             </form>
         </section>
     </div>
-    <div class="tab-container">
-        <input type="checkbox" id="tab-3" checked>
+    <div class="tab-container" id="results-tab">
+        <input type="checkbox" id="tab-3" >
         <label class="tab-label" for="tab-3">
             查询结果
         </label>
         <section class="tab-content" >
             <div id="results-container">
-                <h2 id="initial-prompt">请输入关键词进行查询</h2>
+                <p id="initial-prompt">请输入关键词进行查询</p>
             </div>
         </section>
     </div>
