--- a/frontend/analysis.html
+++ b/frontend/analysis.html
@@ -84,13 +84,12 @@
         <!-- 检测设置区 -->
         <section id="detection-section" class="section">
             <h2><i class="fas fa-cogs"></i> 检测设置</h2>
-            <div class="detection-container">
-                <div class="detection-params">
-                    <h3>基本参数设置</h3>
-                    <form id="detection-form">
+                <form id="detection-form" class="detection-setting-form">
+                    <div class="detection-params">
+                        <h3>基本参数设置</h3>
                         <div class="form-group">
                             <label for="sample-type">样品附着类型</label>
-                            <select id="sample-type">
+                            <select id="sample-type" name="sample-type">
                                 <option value="">请选择样品附着类型</option>
                                 <option value="fruit">水果</option>
                                 <option value="vegetable">蔬菜</option>
@@ -111,7 +110,7 @@
                         </div>
                         <div class="form-group">
                             <label for="detection-method">检测算法</label>
-                            <select id="detection-method">
+                            <select id="detection-method" name="detection_method">
                                 <option value="">请选择检测算法</option>
                                 <option value="method1">PLS-DA</option>
                                 <option value="method2">SVM</option>
@@ -120,35 +119,23 @@
                             </select>
                         </div>
                         <div class="form-group">
+                            <label for="reference-library">参考光谱库权重</label>
+                            <select id="reference-library" name="reference-library">
+                                <option value="default">默认光谱库权重</option>
+                                <option value="custom">自定义光谱库权重</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
                             <label for="sample-info">样品描述信息</label>
-                            <textarea id="sample-info" placeholder="请输入样品的详细信息，如来源、采集日期等..."></textarea>
+                            <textarea id="sample-info" name="sample-info" placeholder="请输入样品的详细信息，如来源、采集日期等..."></textarea>
                         </div>
-                    </form>
-                </div>
-                <div class="advanced-settings">
-                    <h3>高级参数设置</h3>
-                    <form class="form-group">
-                        <label>数据预处理方法</label>
-                        <div class="checkbox-group">
-                            <label><input type="checkbox" name="preprocess" value="smooth"> 平滑处理</label>
-                            <label><input type="checkbox" name="preprocess" value="normalize"> 归一化</label>
-                            <label><input type="checkbox" name="preprocess" value="baseline"> 基线校正</label>
-                            <label><input type="checkbox" name="preprocess" value="derivative"> 导数变换</label>
-                        </div>
-                    </form>
-                    <div class="form-group">
-                        <label for="reference-library">参考光谱库权重</label>
-                        <select id="reference-library">
-                            <option value="default">默认光谱库权重</option>
-                            <option value="custom">自定义光谱库权重</option>
-                        </select>
                     </div>
-                </div>
-                <div class="detection-actions">
-                    <button class="reset-btn"><i class="fas fa-undo"></i> 重置设置</button>
-                    <button class="start-detection-btn"><i class="fas fa-play"></i> 开始检测</button>
-                </div>
-            </div>
+                    <div class="detection-actions">
+                        <button class="reset-btn" type="reset">重置设置</button>
+                        <button class="start-detection-btn" id="start-analysis" type="submit">开始检测</button>
+                    </div>
+                </form>
+
         </section>
 
         <!-- 结果显示区 -->
