--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -7,6 +7,7 @@
     <link href="css/base.css" rel="stylesheet">
     <link href="./css/dashboard.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.6.0/dist/echarts.min.js"></script>
+    <script src="js/dashboard.js" defer></script>
 </head>
 <body>
     <header class="top-navbar">
@@ -18,13 +19,13 @@
         <nav class="top-navbar-links">
             <a class="top-navbar-links-item" href="dashboard.html">检测仪表盘</a>
             <a class="top-navbar-links-item" href="analysis.html">检测服务</a>
-            <a class="top-navbar-links-item" href="spectral.html">数据库</a>
-            <a class="top-navbar-links-item" href="./history">分析历史</a>
-            <a class="top-navbar-links-item" href="./report">帮助</a>
+            <a class="top-navbar-links-item" href="spectral.html">吸收峰数据库</a>
+<!--            <a class="top-navbar-links-item" href="./history">分析历史</a>-->
+<!--            <a class="top-navbar-links-item" href="./report">帮助</a>-->
             <div class="top-navbar-profile">
                 <button class="top-navbar-profile-button">
                     <img alt="list" class="top-navbar-profile-image" src="./src/image/QQ.jpg">
-                    <span>Name</span>
+                    <span>Cheesz</span>
                 </button>
                 <div class="top-navbar-profile-dropdown">
                     <a class="top-navbar-profile-dropdown-item" href="./profile/test1">
@@ -50,190 +51,36 @@
             </div>
 
             <div class="status-card">
-                <h3 class="status-card-title">本周/月异常样本趋势</h3>
+                <h3 class="status-card-title">本周样本检测趋势</h3>
                 <div class="chart-container" id="abnormal_trend"></div>
             </div>
-            <script>
-                const exceeding_rate = echarts.init(document.getElementById('exceeding_rate'));
-                fetch('http://124.222.225.80:8000/dashboard/chart-data/')
-                    .then(response => response.json())
-                    .then(data => {
-                        // 动态生成图表配置
-                        const option = {
-                            title: {text: data.title},
-                            tooltip: {},
-                            legend: {
-                                data: data.series.map(item => item.name)
-                            },
-                            xAxis: {
-                                data: data.categories
-                            },
-                            yAxis: {},
-                            series: data.series
-                        };
-                        exceeding_rate.setOption(option);
-                    })
-                    .catch(error => {
-                        console.error('加载数据失败:', error);
-                        exceeding_rate.setOption({
-                            title: {text: '数据加载失败'},
-                            xAxis: {},
-                            yAxis: {},
-                            series: []
-                        });
-                    });
-
-                // 窗口大小变化时重绘图表
-                window.addEventListener('resize', function () {
-                    exceeding_rate.resize();
-                });
-            </script>
-            <script>
-                const abnormal_trend = echarts.init(document.getElementById('abnormal_trend'));
-                abnormal_trend.setOption({
-                    title: {
-                        text: ''
-                    },
-                    tooltip: {
-                        trigger: 'axis'
-                    },
-                    legend: {},
-                    toolbox: {
-                        show: true,
-                        feature: {
-                            dataZoom: {
-                                yAxisIndex: 'none'
-                            },
-                            dataView: {readOnly: false},
-                            magicType: {type: ['line', 'bar']},
-                            restore: {},
-                            saveAsImage: {}
-                        }
-                    },
-                    xAxis: {
-                        type: 'category',
-                        boundaryGap: false,
-                        data: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']
-                    },
-                    yAxis: {
-                        type: 'value',
-                        axisLabel: {
-                            formatter: '{value} °C'
-                        }
-                    },
-                    series: [
-                        {
-                            name: 'Highest',
-                            type: 'line',
-                            data: [10, 11, 13, 11, 12, 12, 9],
-                            markPoint: {
-                                data: [
-                                    {type: 'max', name: 'Max'},
-                                    {type: 'min', name: 'Min'}
-                                ]
-                            },
-                            markLine: {
-                                data: [{type: 'average', name: 'Avg'}]
-                            }
-                        },
-                        {
-                            name: 'Lowest',
-                            type: 'line',
-                            data: [1, -2, 2, 5, 3, 2, 0],
-                            markPoint: {
-                                data: [{name: '周最低', value: -2, xAxis: 1, yAxis: -1.5}]
-                            },
-                            markLine: {
-                                data: [
-                                    {type: 'average', name: 'Avg'},
-                                    [
-                                        {
-                                            symbol: 'none',
-                                            x: '90%',
-                                            yAxis: 'max'
-                                        },
-                                        {
-                                            symbol: 'circle',
-                                            label: {
-                                                position: 'start',
-                                                formatter: 'Max'
-                                            },
-                                            type: 'max',
-                                            name: '最高点'
-                                        }
-                                    ]
-                                ]
-                            }
-                        }
-                    ]
-                });
-
-                // 窗口大小变化时重绘图表
-                window.addEventListener('resize', function () {
-                    abnormal_trend.resize();
-                });
-            </script>
         </div>
         <!--第二行-->
         <div class="main-line-content">
             <!--        当前检测进度-->
             <div class="status-card">
-                <h3 class="status-card-title">当前检测进度</h3>
-                <a class="status-card-title" id="current_testing_progress">等待数据...</a>
+                <h3 class="status-card-title">总检测数量</h3>
+                <a class="status-card-title" id="all_count">等待数据...</a>
             </div>
 <!--            最近检测进度-->
             <div class="status-card">
                 <h3 class="status-card-title">最近检测时间</h3>
-                <a class="status-card-title" id="recent_detection_time">等待数据...</a>
+                <a class="status-card-title" id="recent_analysis_time">等待数据...</a>
             </div>
 <!--            实时监测状态-->
             <div class="status-card">
                 <h3 class="status-card-title">实时监测状态</h3>
                 <div class="status-metrics">
                     <div class="metric">
-                        <div class="metric-value" id="all_analysis_sum">327</div>
+                        <div class="metric-value" id="analysis_today">327</div>
                         <div class="metric-label">今日检测</div>
                     </div>
                     <div class="metric">
-                        <div class="metric-value">8</div>
-                        <div class="metric-label">在线设备</div>
+                        <div class="metric-value" id="online_devices">0</div>
+                        <div class="metric-label">在线活跃设备</div>
                     </div>
                 </div>
             </div>
-            <script>
-                fetch('http://124.222.225.80:8000/dashboard/get_current_testing_progress')
-                    .then(response => response.json())
-                    .then(data => {
-                        document.getElementById('current_testing_progress').innerHTML = `
-                    <h2>${data.value}</h2>
-                    `;
-                    })
-                    .catch(error => {
-                        document.getElementById('current_testing_progress').innerHTML = error;
-                    });
-            </script>
-            <script>
-                fetch('http://124.222.225.80:8000/dashboard/get_recent_detection_time')
-                    .then(response => response.json())
-                    .then(data => {
-                        document.getElementById('recent_detection_time').innerHTML = `
-                    <h2>${data.message}</h2>
-                    `;
-                    })
-                    .catch(error => {
-                        document.getElementById('recent_detection_time').innerHTML = error;
-                    });
-            </script>
-            <script>
-                fetch('http://124.222.225.80:8000/dashboard/get_all_analysis_sum')
-                    .then(response => response.json())
-                    .then(data => {
-                        document.getElementById('all_analysis_sum').innerText = data.value;
-                    })
-                    .catch(error => {
-                        document.getElementById('all_analysis_sum').innerHTML = error;
-                    });
-            </script>
         </div>
 
         <!--第三行-->
@@ -241,62 +88,19 @@
             <div class="status-card">
                 <h3 class="status-card-title">近期检测记录</h3>
                 <div class="activity-container">
-                    <div class="activity-timeline">
-                        <!-- 活动记录1 -->
-                        <div class="activity-card">
-                            <div class="activity-date">
-                                <span class="day">15</span>
-                                <span class="month">6月</span>
-                            </div>
-                            <div class="activity-content">
-                                <h3>检测测试1</h3>
-                                <p class="activity-time">14:00 - 15:30</p>
-                                <p class="activity-description">test1</p>
-                                <div class="activity-tag project">项目</div>
-                            </div>
-                        </div>
-
-                        <!-- 活动记录2 -->
-                        <div class="activity-card">
-                            <div class="activity-date">
-                                <span class="day">14</span>
-                                <span class="month">6月</span>
-                            </div>
-                            <div class="activity-content">
-                                <h3>检测测试2</h3>
-                                <p class="activity-time">全天</p>
-                                <p class="activity-description">test2</p>
-                                <div class="activity-tag team">团队</div>
-                            </div>
-                        </div>
-
-                        <!-- 活动记录3 -->
-                        <div class="activity-card">
-                            <div class="activity-date">
-                                <span class="day">12</span>
-                                <span class="month">6月</span>
-                            </div>
-                            <div class="activity-content">
-                                <h3>检测测试3</h3>
-                                <p class="activity-time">10:00 - 12:00</p>
-                                <p class="activity-description">test3</p>
-                                <div class="activity-tag learning">学习</div>
-                            </div>
-                        </div>
+                    <div class="activity-timeline" id="activity_timeline">
                     </div>
                 </div>
             </div>
         </div>
     </main>
+
     <footer>
         <div class="footer-content">
             <div class="footer-section about">
+                <img alt="农药检测" src="./src/image/logo.png">
                 <h3>关于系统</h3>
                 <p>农药残留光谱检测系统是一个基于超表面光谱分析的农产品安全检测工具，通过机器学习算法模型，快速准确地检测农产品中的农药残留情况。</p>
-                <div class="contact">
-                    <p><i class="fas fa-phone"></i> +86 175 125 79193</p>
-                    <p><i class="fas fa-envelope"></i> chenhaonan919@gmail.com</p>
-                </div>
             </div>
             <div class="footer-section links">
                 <h3>快速链接</h3>
@@ -319,9 +123,55 @@
                 </ul>
             </div>
         </div>
+<!--        <div class="footer-note">-->
+<!--            Built with ♥ | Last updated: 2025-06-01-->
+<!--        </div>-->
         <div class="footer-bottom">
-            <p>&copy; 2025 农药残留光谱检测系统 | 版权所有</p>
+            <div class="contact">
+                <a href="mailto:chenhaonan919@gmail.com" title="Email">Email</a>
+                <a href="https://github.com/Cheesz-ball" target="_blank" rel="noopener">GitHub</a>
+                <div class="hover-container">
+                    <span>WeChat</span>
+                    <div class="image-placeholder"></div>
+                </div>
+            </div>
+            <p>&copy; 2025 Cheesz | 版权所有</p>
         </div>
     </footer>
+    <script>
+        const trigger = document.querySelector('.hover-container');
+        const container = document.querySelector('.image-placeholder');
+        let isLoaded = false;
+        let imgNode = null;
+
+        trigger.addEventListener('mouseenter', async () => {
+            if (!isLoaded) {
+                try {
+                    const response = await fetch('http://124.222.225.80:8000/dashboard/get_wechat');
+                    if (!response.ok) throw new Error('Network resp error');
+                    const blob = await response.blob();
+                    const img = new Image();
+                    img.src = URL.createObjectURL(blob);
+                    img.alt = 'Fetched from backend';
+                    img.style.maxWidth = '200px';  // 可根据需求调整图片大小
+                    img.style.display = 'block';
+                    container.innerHTML = '';
+                    container.appendChild(img);
+                    imgNode = img;
+                    isLoaded = true;
+                    container.style.display = 'block';
+                } catch (error) {
+                    container.textContent = 'Failed to load photo';
+                    container.style.display = 'block';
+                }
+            } else {
+                container.style.display = 'block';
+            }
+        });
+
+        trigger.addEventListener('mouseleave', () => {
+            container.style.display = 'none';
+        });
+    </script>
 </body>
 </html>
