--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -6,7 +6,7 @@
     <title>农药残留检测开放平台</title>
     <link href="css/base.css" rel="stylesheet">
     <link href="./css/dashboard.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/echarts@5.6.0/dist/echarts.min.js"></script>
+    <script src="js/echarts.min.js"></script>
     <script src="js/dashboard.js" defer></script>
 </head>
 <body>
