--- a/frontend/spectral.html
+++ b/frontend/spectral.html
@@ -20,13 +20,13 @@
     <nav class="top-navbar-links">
         <a class="top-navbar-links-item" href="dashboard.html">检测仪表盘</a>
         <a class="top-navbar-links-item" href="analysis.html">检测服务</a>
-        <a class="top-navbar-links-item" href="spectral.html">数据库</a>
-        <a class="top-navbar-links-item" href="./history">分析历史</a>
-        <a class="top-navbar-links-item" href="./report">帮助</a>
+        <a class="top-navbar-links-item" href="spectral.html">吸收峰数据库</a>
+        <!--            <a class="top-navbar-links-item" href="./history">分析历史</a>-->
+        <!--            <a class="top-navbar-links-item" href="./report">帮助</a>-->
         <div class="top-navbar-profile">
             <button class="top-navbar-profile-button">
                 <img alt="list" class="top-navbar-profile-image" src="./src/image/QQ.jpg">
-                <span>Name</span>
+                <span>Cheesz</span>
             </button>
             <div class="top-navbar-profile-dropdown">
                 <a class="top-navbar-profile-dropdown-item" href="./profile/test1">
